# Turtle_sim

./: .gitignore  Dockerfile  README.md  package.xml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
scripts/: post_start.sh  set_GPU_param.sh  sim_build.sh
src/turtlebot_bringup/: package.xml  setup.py
src/turtlebot_bringup/launch/: turtlebot4_gz.launch.py
src/turtlebot_sim/: package.xml  setup.py
src/turtlebot_sim/models/Hatchback blue/meshes/: hatchback.mtl
src/turtlebot_sim/models/ground_plane_large/: model.config  model.sdf
src/turtlebot_sim/models/ground_plane_large/materials/scripts/: ground.material
src/turtlebot_sim/models/mine/: model.config  model.sdf
src/turtlebot_sim/models/mine/meshes/: mine.dae
src/turtlebot_sim/models/x500_oak/: model.config  model.sdf
turtlebot_sim/: uav_camera_det.py
turtlebot_sim/turtlebot4_ignition_bringup/gui/lite/: gui.config
turtlebot_sim/turtlebot4_ignition_bringup/launch/: turtlebot4_spawn.launch.py
turtlebot_sim/turtlebot4_ignition_bringup/models/walking_person/: model.sdf
turtlebot_sim/turtlebot4_ignition_bringup/worlds/: office.sdf
turtlebot_sim/turtlebot_sim/: CMakeLists.txt  package.xml
